
*** Added
    - Support single- and double-quoted strings in the search filter
      - Thank you [[https://github.com/schoettl][@schoettl]] for the [[https://github.com/200ok-ch/organice/pull/176][PR]] 🙏
    - Trim whitespace for entered or updated headlines
      - Thank you [[https://github.com/schoettl][@schoettl]] for the [[https://github.com/200ok-ch/organice/pull/177][PR]] 🙏

** <2019-12-31 Tue>

*** Added
    - *Searching of headlines/todos with a composable query language*
      - Thank you [[https://github.com/schoettl][@schoettl]] for the [[https://github.com/200ok-ch/organice/pull/154][PR]] 🙏
    - Routing for Settings (/settings) and Sample (/sample)
    - Routing for Agenda and TaskList

*** Changes
    - The action for capture templates now uses a more idiomatic
      'plus' icon instead of a 'list' icon

** <2019-12-28 Sat>

*** Added
    - Proper coloring of DONE todoKeywords from custom todo sequences
      - Thank you [[https://github.com/schoettl][schoettl]] for your [[https://github.com/200ok-ch/organice/pull/165][PR]]!
    - Place TODO keyword of previous header in the new header
      - Thank you [[https://github.com/schoettl][schoettl]] for your [[https://github.com/200ok-ch/organice/pull/164][PR]]!

*** Changed
    - Refactor current Org parser and regex
      - Thank you [[https://github.com/schoettl][schoettl]] for your [[https://github.com/200ok-ch/organice/pull/161][PR]]!

** <2019-12-26 Thu>

*** Added

    - "Share" button for headlines (sharing via email)
      - Thank you [[https://github.com/schoettl][schoettl]] for your [[https://github.com/200ok-ch/organice/pull/145][PR]]!
    - Automatically render links for URLs with www prefix, but without
      protocol
      - Thank you [[https://github.com/schoettl][schoettl]] for your [[https://github.com/200ok-ch/organice/pull/159][PR]]!

** <2019-12-25 Wed>

*** Added

    - Suggestion list for inputs in property editor